<resources>
    <string name="app_name">My Application</string>
    <string name="n3" translatable="false">3</string>
    <string name="game_over">GAME OVER</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="scores">Score</string>
    <string name="exit">Exit</string>
    <string name="best_scores">Best Scores</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="submit">Submit</string>
    <string name="your_score">Your score :</string>
    <string name="enter_your_name_to_save_your_score">Enter your name to submit your score!</string>
    <string name="name">Name</string>
    <string name="sounds">Sounds</string>
    <string name="music">Music</string>
    <string name="hit_toast">Hit!</string>
    <string name="miss_toast">Miss!</string>
    <string name="wrong_name_toast">Wrong name!</string>
    <string name="exit_dialog">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_toast">Press again to exit</string>
    <string name="exit_game_toast">Game paused press again to exit</string>
    <string name="n1" translatable="false">1</string>
    <string name="nada">-</string>
    <string name="n2" translatable="false">2</string>
    <string name="n4" translatable="false">4</string>
    <string name="n5" translatable="false">5</string>
    <string name="n6" translatable="false">6</string>
    <string name="n7" translatable="false">7</string>
    <string name="n8" translatable="false">8</string>
    <string name="n9" translatable="false">9</string>
    <string name="n10" translatable="false">10</string>
    <string name="long_name">Very long Name!</string>
    <string name="sound" translatable="false">sht</string>
    <string name="mof">The music has turned off</string>
    <string name="mon">The music has turned on</string>
    <string name="sof">The sounds has turned off</string>
    <string name="son">The sounds has turned on</string>
    <string name="notTopTen">Sorry, your score was not high enough to get in the top 10!</string>
    <string name="topTen">Congratulations!!! You got into the top 10 high scores!</string>
    <string name="bestScore">Congratulations!!! You got the new best high score!</string>

</resources>
